syntax = "proto3";

option csharp_namespace = "Server";

service Greeter {
  rpc UnaryCall (HelloRequest) returns (HelloReply);
  rpc ClientStreaming (stream HelloRequest) returns (HelloListReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message HelloListReply {
  repeated HelloReply messages = 1;
}
